# Computer-Graphics

./: README.md
FinalProj/: README.md  aabb.h  adding_light.ppm  bad_sphere_lighting.ppm  before_light.ppm  big_light.ppm  big_light_good_reduce.ppm  big_light_reduced_brightness.ppm  camera.h  hitable.h  hitable_list.h  main.ppm  material.h  perlin.h  ray.h  raytracer  raytracer.cpp  raytracer.ppm  small_light.ppm  sphere.h  texture.h
Proj1/1A/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  project1A.cxx
Proj1/1A/project1A.app/Contents/: Info.plist
Proj1/1B/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  project1B.cxx
Proj1/1B/project1B.app/Contents/: Info.plist
Proj1/1C/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  project1C.cxx
Proj1/1C/project1C.app/Contents/: Info.plist
Proj1/1D/: CMakeLists.txt  project1D.cxx
Proj1/1E/: CMakeCache.txt  CMakeLists.txt  Makefile  Matrix.cxx  cmake_install.cmake  project1E.cxx
Proj1/1E/project1E.app/Contents/: Info.plist
Proj1/1F/: 1Fvidlink.txt  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  project1F.cxx  project1F.tar
Proj1/1F/project1F.app/Contents/: Info.plist
Proj2/2A/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  project2A.cxx  project2A.tar
Proj2/2A/project2A.app/Contents/: Info.plist
Proj2/2B/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  project2B.cxx
Proj2/2B/project2B.app/Contents/: Info.plist
Proj2/2B/project2B.app/Contents/MacOS/: project2B
(+6 files in other folders)
